# hou-cli

./: Cargo.toml  dist-workspace.toml
docs/: mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/getting-started/: installation.md  quickstart.md
docs/docs/guide/: builds.md  launching.md  packages.md  projects.md  tools.md
docs/docs/reference/: cli.md  configuration.md
src/: commands.rs  config.rs  credentials.rs  elevated_command.rs  hou.rs  houdini.rs  installations.rs  installer.rs  launcher.rs  main.rs  package.rs  products.rs  project.rs  settings.rs  sidefx.rs  utils.rs
src/commands/: config.rs  eula.rs  find.rs  init.rs  install.rs  launcher.rs  list.rs  login.rs  logout.rs  package.rs  run.rs  setup.rs  sidefx.rs  uninstall.rs  update.rs
src/package/: cache.rs  checksum.rs  git.rs  install.rs  manifest.rs  patch.rs  source.rs  uninstall.rs  update.rs
src/sidefx/: build.rs  download.rs  products.rs
