[package]
name = "hou-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
is_executable = "1.0.5"
itertools = "0.14.0"
reqwest = { version = "0.13.2", features = ["json"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }

