[package]
name = "hou-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hou"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
serde_json = "1"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
is_executable = "1.0.5"
itertools = "0.14.0"
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
ureq = {version = "3.3.0", features = ["json"]}

